fix: sort indicator not visible if text overflows

--- a/packages/material/scss/grid/_layout.scss
+++ b/packages/material/scss/grid/_layout.scss
@@ -90,6 +90,14 @@ $grid-group-drag-clue-opacity: .9 !default;
         }
     }
 
+    .k-cell-inner {
+        .k-grid-filter,
+        .k-header-column-menu,
+        .k-hierarchy-cell .k-icon {
+            line-height: normal;
+        }
+    }
+
     .k-grouping-header {
 
         .k-group-indicator {
